# termlingus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: ThreadSafeQueue.hpp  bmp.h  client.h  command.h  gui.h  server.h  thumbnail.h  video.hpp  ytdl.h
py/: search.py
py/search/: search.py
src/: bmp.cpp  client.cpp  gui.cpp  gui.h  home.cpp  main.c  main.cpp  server.cpp  ytdl.cpp  ytdl.h
src/gui/: gui.cpp  thumbnail.cpp
